--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "todoApp",
+    "name": "Todo App Sample Project",
     "slug": "todoApp",
     "version": "1.0.0",
     "orientation": "portrait",
